# ffxiv-item-name-database-api

./: Cargo.toml  Makefile  buildspec.yml  sam.yml
.circleci/: config.yml
python/: list.py  search.py
src/: model.rs
